# personal-debugger

./: README.md  pyproject.toml
src/: for_loop_functions.py  main.py  plotting_stuff.py  profiling_tools.py  timeit_tools.py  timing_for_loops.py
tests/: test_for_loop_times.py  test_profiler_functions.py  test_timeit_functions.py
