[tool.poetry]
name = "personal-debugger"
version = "0.1.0"
description = "A Python project"
authors = ["Jeff Gruenbaum <jeff.gruenbaum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
